--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -12,5 +12,5 @@ jobs:
       - uses: actions/checkout@master
       - uses: actions/setup-node@v3
         with:
-          node-version: [14]
+          node-version: 16
       - run: node index.js
