--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -18,4 +18,5 @@ jobs:
       - run: |
           touch .env
           echo KEY="${{ secrets.KEY }}" >> .env
+          npm install
           node index.js
